# Soccer-Data-Analysis

./: .gitpod.dockerfile  .gitpod.yml  CalcWinPercentage.ipynb  DataProcessing.ipynb  FB_Ref_Historical_Scraper.ipynb  README.md  SPI-Research.ipynb  Scraping_Data_Sets.ipynb  Soccer-Data-Analysis-Workspace.jupyterlab-workspace  World Cup Simulator.cpp  requirements.txt
.ipynb_checkpoints/: CalcWinPercentage-checkpoint.ipynb
Data/: Bundesliga.csv  EPL.csv  Eredivisie.csv  La Liga.csv  spi_global_rankings.csv  spi_matches_Bundesliga.csv  spi_matches_EPL.csv  spi_matches_Eredivisie.csv  spi_matches_La_Liga.csv  spi_matches_latest.csv
EPL-env/: pyproject.toml
EPL-env/tests/: test_epl_data.py
data-processing/: DataProcessing.ipynb  FB_Ref_Historical_Scraper.ipynb  README.md  Scraping_Data_Sets.ipynb
historical-research/: README.md  SPI_Research.ipynb
